--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ anyhow = "1.0.79"
 half = "2.4.1"
 metal = "0.29.0"
 objc = "0.2.7"
+rand = "0.8.5"
+rand_distr = "0.4.3"
 
 [profile.release]
 debug = true
